--- a/public/style.css
+++ b/public/style.css
@@ -1,18 +1,54 @@
 body {
-    margin: 0;
-    display: flex;
+	margin: 0;
+	display: flex;
 	width: 100vw;
 	height: 100vh;
 	align-items: center;
 	justify-content: center;
 }
 
-.loader {
-	width: 10rem;
-	height: 10rem;
-    background: #30A2FF;
-}
-
 .hide {
 	display: none;
+}
+
+.loader {
+	width: 5rem;
+	height: 5rem;
+	display: inline-block;
+	position: relative;
+}
+
+canvas {
+	border: 1px solid black;
+}
+
+.loader::after,
+.loader::before {
+	content: '';
+	box-sizing: border-box;
+	width: 5rem;
+	height: 5rem;
+	border-radius: 50%;
+	background: #30A2FF;
+	position: absolute;
+	left: 0;
+	top: 0;
+	opacity: 0;
+	animation: animloader 2s linear infinite;
+}
+
+.loader::after {
+	animation-delay: 1s;
+}
+
+@keyframes animloader {
+	0% {
+		transform: scale(0);
+		opacity: 1;
+	}
+
+	100% {
+		transform: scale(1);
+		opacity: 0;
+	}
 }
