--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,11 @@ body {
 	align-items: center;
 }
 
+h1 {
+	font-size: 1rem;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .github img {
 	margin-top: 1rem;
 	width: 1.5rem;
